# MAS_for_Spanish_Language_Learning

./: README.md  first_mas_attempt.ipynb  pyproject.toml
src/: app.py
src/mas/: agents.py  system.py  tools.py
src/mas/agent_configs/: curriculum_tracking_agent.yaml  drill_creation_agent.yaml  grammar_explanation_agent.yaml  supervisor_agent.yaml
